less load img, add btn disabled

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit" class="btn">
+      <button type="submit" class="search btn">
         <div class="submit__spinner" style="display: none">
           <span
             class="spinner-border spinner-border-sm"
